--- a/package.json
+++ b/package.json
@@ -11,11 +11,18 @@
   },
   "dependencies": {
     "@vercel/examples-ui": "^1.0.5",
+    "clsx": "^1.2.1",
     "ethers": "^5.7.2",
+    "eventsource-parser": "^1.0.0",
     "next": "13.2.4",
     "next-auth": "^4.20.1",
+    "openai": "^3.2.1",
+    "openai-streams": "^5.1.0",
     "react": "18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
+    "react-wrap-balancer": "^0.4.0",
+    "swr": "^2.1.3",
     "wagmi": "^0.2.28"
   },
   "devDependencies": {
@@ -26,6 +33,7 @@
     "eslint-config-next": "^12.3.4",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.2.7",
+    "turbo": "^1.8.3",
     "typescript": "4.5.5"
   }
 }
