--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@vercel/examples-ui": "^1.0.5",
+    "buffer-to-data-url": "^1.0.0",
     "clsx": "^1.2.1",
     "ethers": "^5.7.2",
     "eventsource-parser": "^1.0.0",
@@ -18,6 +19,7 @@
     "next-auth": "^4.20.1",
     "openai": "^3.2.1",
     "openai-streams": "^5.1.0",
+    "pngjs": "^7.0.0",
     "react": "18.2.0",
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
@@ -27,6 +29,7 @@
   },
   "devDependencies": {
     "@types/node": "17.0.14",
+    "@types/pngjs": "^6.0.1",
     "@types/react": "17.0.38",
     "autoprefixer": "^10.4.14",
     "eslint": "^8.36.0",
