fix tailwind and openai

--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.14",
+    "@heroicons/react": "^2.0.17",
     "@vercel/examples-ui": "^1.0.5",
     "buffer-to-data-url": "^1.0.0",
     "clsx": "^1.2.1",
