--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
+    "@rainbow-me/rainbowkit": "^0.12.8",
+    "@rainbow-me/rainbowkit-siwe-next-auth": "^0.1.9",
     "@vercel/examples-ui": "^1.0.5",
     "buffer-to-data-url": "^1.0.0",
     "clsx": "^1.2.1",
@@ -26,8 +28,9 @@
     "react-cookie": "^4.1.1",
     "react-dom": "18.2.0",
     "react-wrap-balancer": "^0.4.0",
+    "siwe": "^1.1.6",
     "swr": "^2.1.3",
-    "wagmi": "^0.2.28"
+    "wagmi": "^0.12.10"
   },
   "devDependencies": {
     "@types/node": "17.0.14",
